feat(app): 完善应用级业务接口
